@@ -1,3 +1,8 @@
+2011-07-23 <fumiyas at OSS Technology, Inc., Japan>
+	* smbldap-populate: Create all node entries if $config{usersdn}
+	  (and/or others) has multiple nodes under $config{suffix}
+	  (e.g. usersdn="ou=Users,ou=foo,ou=bar,${suffix}" in smbldap.conf)
+
 2011-07-13 <fumiyas at OSS Technology, Inc., Japan>
 	* smbldap-useradd: New option: --non-unique (Allow the creation of a
 	  user account with a duplicate (non-unique) UID)
